--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ background-color: #F2F2F2;
 
 .header{
     position: relative;
-    width: 100%;
+    width: 10000px;
     height: 70px;
     background-color:khaki;
     color: red;
