--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ background-color: #F2F2F2;
    
     border-top-right-radius: 50px;
  
-    width: 1000px;
+    width: 100%;
     top: 150px;
     height: 300px;
     left: 450px;
