--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
 @media screen and (max-width: 1280px) { 
     div.header {width: 1200px;}
-    div.content {top:100000px;}
-          
-}
+       }
+@media screen and (max-width: 1280px) { 
+    div.content {left:50px;}
+       }
 @font-face {
     font-family: Anton-Regular;
     src: url(Anton-Regular.ttf);
