--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ background-color: #F2F2F2;
 .content{
    
     border-top-right-radius: 50px;
- 
+    position:relative;
     width: 1000px;
     top: 150px;
     height: 300px;
