--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+@media screen and (max-width: 1280px) { 
+    div.header {width: 1200px;}
+       }
 
 @font-face {
     font-family: Anton-Regular;
