--- a/style.css
+++ b/style.css
@@ -1,6 +1,12 @@
 @media screen and (max-width: 1280px) { 
     div.header {width: 1200px;}
        }
+@media screen { 
+    div.content {left:55px;}
+       }
+@media screen { 
+    div.hat {bottom:0px;}
+       }
 
 @font-face {
     font-family: Anton-Regular;
