--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 @media screen and (max-width: 1280px) { 
     div.header {width: 1200px;}
        }
-@media screen { 
-    div.content {left:55px;}
+@media screen and (max-width: 1280px) { 
+    div.content  {left:55px;}
        }
-@media screen { 
-    div.hat {bottom:0px;}
+@media screen and (max-width: 1280px) { 
+    div.hat  {bottom:0px;}
        }
 
 @font-face {
