--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ background-color: #F2F2F2;
 .header{
     position: relative;
     width: 2000px;
-    height: 110px;
+    height: 130px;
     background-color:khaki;
     color: red;
     text-align: center;
@@ -43,8 +43,8 @@ background-color: #F2F2F2;
     position: relative;
     width: 1000px;
     top: 150px;
-    height: 1900px;
-    left: 250px;
+    height: 2100px;
+    left: 450px;
     right: 500px;
     background-color: white;
 }
@@ -57,7 +57,7 @@ p{
     font-family: RobotoMono-VariableFont_wght;
     position: relative;
     top:120px;
-    left: 650px;
+    left: 350px;
     
 }
 .insta{
@@ -74,10 +74,14 @@ a{
 .hat{
     position: absolute;
     z-index: 0;
-    top: 218px;
-    left: 1150px;
+    top: 239px;
+    left: 1350px;
    width: 200px;
 }
 span{
     color: red;
+}
+.o{
+    position: relative;
+    left: -115px;
 }
