--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ background-color: #F2F2F2;
     position: relative;
     width: 1200px;
     top: 150px;
-    height: 2200px;
+    height: 1750px;
     left: 450px;
     right: 500px;
     background-color: white;
@@ -57,8 +57,8 @@ p{
     font-family: RobotoMono-VariableFont_wght;
     position: absolute;
     top:120px;
-    left: 450px;
-    
+    left: 750px;
+    font-size: 45px;
 }
 .insta{
     width: 100px;
