--- a/style.css
+++ b/style.css
@@ -19,45 +19,47 @@ font-weight: normal;
 }
 
 body{
+    width: 1000px;
+    height: 1700px;
 margin: 0px;
 padding: 0px;
 font-family: Anton-Regular;
-font-size: 80px;
+font-size: 100px;
 
 background-color: #F2F2F2;
 
 }
 
 .header{
-    position: relative;
-    width: 2000px;
-    height: 130px;
+    position: absolute;
+    width: 100%;
+    height: 150px;
     background-color:khaki;
     color: red;
     text-align: center;
 }
 
 .content{
-   
+   text-align: center;
     border-top-right-radius: 50px;
     position: absolute;
     width: 1200px;
     top: 350px;
     height: 1750px;
-    left: 450px;
+    left: 250px;
     right: 500px;
     background-color: white;
 }
 p{
     font-family: RobotoMono-VariableFont_wght;
-    font-size: 70px;
+    font-size: 65px;
 
 }
 .instagram{
     font-family: RobotoMono-VariableFont_wght;
     position: relative;
-    top:1750px;
-    left: 750px;
+    top:1988px;
+    left: 500px;
     font-size: 45px;
 }
 .insta{
@@ -75,7 +77,7 @@ a{
     position: absolute;
     z-index: 0;
     top: 239px;
-    left: 1550px;
+    left: 1350px;
    width: 200px;
 }
 span{
