--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ background-color: #F2F2F2;
 
 .header{
     position: absolute;
-    width: 100%;
+    width: 1900px;
     height: 150px;
     background-color:khaki;
     color: red;
@@ -77,7 +77,7 @@ a{
     position: absolute;
     z-index: 0;
     top: 239px;
-    left: 1350px;
+    left: 1220px;
    width: 200px;
 }
 span{
