--- a/style.css
+++ b/style.css
@@ -87,3 +87,9 @@ span{
     position: relative;
     left: -115px;
 }
+.comment{
+    position: absolute;
+    width: 1890px;
+    top:2500px;
+    background-color:khaki;
+}
