--- a/style.css
+++ b/style.css
@@ -58,8 +58,8 @@ p{
 .instagram{
     font-family: RobotoMono-VariableFont_wght;
     position: relative;
-    top:2200px;
-    left: 600px;
+    
+    left: 45px;
     font-size: 45px;
 }
 .insta{
@@ -85,14 +85,23 @@ span{
 }
 .o{
     position: relative;
-    left: -115px;
+    left: 100px;
 }
 .comment{
     position: absolute;
-    width: 1890px;
+    width: 1350px;
     top:2500px;
     background-color:khaki;
-     width: 1350px;
-    top:2500px;
     left: 200px;
+    
+}
+.result{
+    position: relative;
+    top: 700px;
+}
+.information{
+    position: relative;
+    font-size: 10px;
+    text-decoration: line-through;
+    left: 560px;
 }
