--- a/style.css
+++ b/style.css
@@ -103,6 +103,15 @@ span{
     position: relative;
     font-size: 10px;
     text-decoration: line-through;
-        left: 450px;
+    left: 450px;
     font-size: 20px;
+}
+.res{
+    position:relative; 
+    top:-40px;
+}
+.yusssuf{
+    position:relative;
+    top: -70px;
+    left: 0px;
 }
